tests/src/frontend/typechecking/invalid/infer_frozen_met_3.sk
class Tester() {
  fun foo<T: frozen>(Array<T>, T): void {
    void
  }
}

fun test(): void {
  Tester().foo(Array[], mutable Array[])
}
